Fix plate image being too large for galaxy fold screen size by changing image size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ main {
 }
 
 img {
-    width: 300px;
+    width: 280px;
 }
 
 .recipe {
